# FindAllAxesOfSymmetryOfPolygon

./: CMakeLists.txt  README.md
Include/: GlobalConstants.h  Line2D.h  Point2D.h  Polygon2D.h  Polygon2DAxesOfSymmetryFinder.h  Polygon2DLoader.h  Polygon2DLoaderFromTxt.h  PolygonAxesOfSymmetryFinder.h  Vector2D.h
Source/: Line2D.cpp  Point2D.cpp  Polygon2D.cpp  Polygon2DAxesOfSymmetryFinder.cpp  Polygon2DLoaderFromTxt.cpp  PolygonAxesOfSymmetryFinder.cpp  Vector2D.cpp  main.cpp
